--- a/2025/aoc2025.ipynb
+++ b/2025/aoc2025.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPvXMeRmZc3+1P5fSZ53/21",
+      "authorship_tag": "ABX9TyOyXDIm0zwxxZDus3626C+l",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -46,7 +46,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 5,
       "metadata": {
         "id": "Qy0LSaFPC5ME",
         "collapsed": true
@@ -214,7 +214,7 @@
         "\n",
         "    return test_input"
       ],
-      "execution_count": 23,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -295,7 +295,7 @@
       "metadata": {
         "id": "FwCcOq_MJ1RT"
       },
-      "execution_count": 24,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -2228,9 +2228,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "nA3_z4SoYBZI",
-        "outputId": "e44745c0-e42b-43c1-946b-97b1f44f20a6"
+        "outputId": "168a580d-c07d-4db8-a110-c8055546dc53"
       },
-      "execution_count": 94,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -2251,7 +2251,7 @@
             "<link rel=\"shortcut icon\" href=\"/favicon.png\"/>\n",
             "<script>window.addEventListener('click', function(e,s,r){if(e.target.nodeName==='CODE'&&e.detail===3){s=window.getSelection();s.removeAllRanges();r=document.createRan\n",
             "---\n",
-            "Found 16 <code> tags. Inspecting content for test input:\n",
+            "Found 33 <code> tags. Inspecting content for test input:\n",
             "---\n",
             "Candidate 1:\n",
             "3-5\n",
@@ -2311,6 +2311,60 @@
             "Candidate 16:\n",
             "3\n",
             "\n",
+            "Candidate 17:\n",
+            "739\n",
+            "\n",
+            "Candidate 18:\n",
+            "3-5\n",
+            "10-14\n",
+            "16-20\n",
+            "12-18\n",
+            "\n",
+            "Candidate 19:\n",
+            "3\n",
+            "\n",
+            "Candidate 20:\n",
+            "4\n",
+            "\n",
+            "Candidate 21:\n",
+            "5\n",
+            "\n",
+            "Candidate 22:\n",
+            "10\n",
+            "\n",
+            "Candidate 23:\n",
+            "11\n",
+            "\n",
+            "Candidate 24:\n",
+            "12\n",
+            "\n",
+            "Candidate 25:\n",
+            "13\n",
+            "\n",
+            "Candidate 26:\n",
+            "14\n",
+            "\n",
+            "Candidate 27:\n",
+            "15\n",
+            "\n",
+            "Candidate 28:\n",
+            "16\n",
+            "\n",
+            "Candidate 29:\n",
+            "17\n",
+            "\n",
+            "Candidate 30:\n",
+            "18\n",
+            "\n",
+            "Candidate 31:\n",
+            "19\n",
+            "\n",
+            "Candidate 32:\n",
+            "20\n",
+            "\n",
+            "Candidate 33:\n",
+            "14\n",
+            "\n",
             "Test input candidates extracted. Please review them to identify the actual test input and repeat with concrete candidate number (1-based) if needed.\n",
             "Identified Test Input (candidate 1):\n",
             "---------------------\n",
@@ -2340,9 +2394,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "7IZLX9zxYLH8",
-        "outputId": "99240e8e-3e25-4255-e443-5b6058ec1996"
+        "outputId": "88130df1-d3b9-4b14-a37c-910cbabd31b9"
       },
-      "execution_count": 97,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -2355,12 +2409,348 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "fresh_ranges, ingredients = [s.splitlines() for s in input_5.split('\\n\\n')]\n",
+        "fresh_ranges = [tuple([int(i) for i in range_str.split('-')]) for range_str in fresh_ranges]\n",
+        "ingredients = [int(i) for i in ingredients]"
+      ],
       "metadata": {
         "id": "pKCK6-uOYVyw"
       },
-      "execution_count": null,
+      "execution_count": 47,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Part 1\n",
+        "Count ingredients in any of the fresh_ranges"
+      ],
+      "metadata": {
+        "id": "MtPZJG9jilK6"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "len([i for i in ingredients if reduce(lambda f, r: f or i >= r[0] and i <= r[1], fresh_ranges, False)])"
+      ],
+      "metadata": {
+        "id": "gCipBxayfjd1",
+        "outputId": "dbc16fdc-156c-44c0-e399-888b5a6e8119",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 48,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "739"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 48
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Part 2\n",
+        "Find number of unique ingredients by evaluating the fresh_ranges only"
+      ],
+      "metadata": {
+        "id": "Xn2z2IMqisJI"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def range_union(r1, r2):\n",
+        "  r1l, r1r = r1\n",
+        "  r2l, r2r = r2\n",
+        "  if (r2l > r1r + 1):  # r1 [ ... ] r2\n",
+        "    return [r1, r2]\n",
+        "  elif (r1l > r2r + 1):  # r2 [ ... ] r1\n",
+        "    return [r2, r1]\n",
+        "  return [(min(r1l, r2l), max(r1r, r2r))]  # overlapping or adjacent"
+      ],
+      "metadata": {
+        "id": "-fhAPsO4hmT0"
+      },
+      "execution_count": 13,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def optimize_ranges(rs, debug = False):\n",
+        "  if len(rs) <= 1:\n",
+        "    return rs\n",
+        "\n",
+        "  def opt(subrs, r):\n",
+        "    # inner recursion tries to merge r into subrs (sublist of ranges)\n",
+        "    if debug:\n",
+        "      print(subrs, r)\n",
+        "    if not subrs:\n",
+        "      return [r]\n",
+        "    else:\n",
+        "      ru = range_union(subrs[0], r)\n",
+        "      if len(ru) == 1:\n",
+        "        return ru + subrs[1:]  # r overlaps with first element, return modified list\n",
+        "      else:\n",
+        "        # try next range; if nothing overlaps with r this will ultimately return the input list extended with r\n",
+        "        return [subrs[0]] + opt(subrs[1:], r)\n",
+        "\n",
+        "  os = opt(rs[1:], rs[0])\n",
+        "  if os[-1] == rs[0]:  # first range has no overlap, returned at end, also implies len(os) == len(rs)\n",
+        "    if debug:\n",
+        "      print(\"--\")\n",
+        "    return [rs[0]] + optimize_ranges(os[:-1], debug)  # keep first, optimize rest\n",
+        "  return optimize_ranges(os, debug)  # optimize changed list\n"
+      ],
+      "metadata": {
+        "id": "I0086Lnplxg1"
+      },
+      "execution_count": 52,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "fresh_ranges"
+      ],
+      "metadata": {
+        "collapsed": true,
+        "id": "1C5bRWdFkg8M",
+        "outputId": "4c207e66-2529-4ffa-d059-8db77d3c4472",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 51,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[(316912306652712, 320683419496855),\n",
+              " (157110396540658, 158515545043416),\n",
+              " (413380390732509, 413851343783550),\n",
+              " (45534978319107, 45768124861513),\n",
+              " (13873831532241, 16714933495213),\n",
+              " (415961886159964, 416594970472954),\n",
+              " (543818828813452, 545340095506657),\n",
+              " (545666714619049, 547049232876190),\n",
+              " (292208729101773, 294545425285400),\n",
+              " (354113252785914, 354113252785914),\n",
+              " (415961886159964, 416290773279649),\n",
+              " (85848681005753, 89832035631476),\n",
+              " (154864348091097, 156513462758390),\n",
+              " (383854415172363, 387779080829907),\n",
+              " (508100788284877, 508253922520635),\n",
+              " (224767428559384, 225090632954429),\n",
+              " (406367833241454, 411289155251763),\n",
+              " (509481120146979, 510324215823697),\n",
+              " (234467272956575, 237623862906337),\n",
+              " (453363172626346, 458685448350103),\n",
+              " (536828066063266, 540039459032565),\n",
+              " (153203106223451, 154535545882599),\n",
+              " (68933622499224, 70234710680711),\n",
+              " (513703091162399, 519471330865790),\n",
+              " (213108282863481, 216294968096761),\n",
+              " (419296794005487, 419809022460311),\n",
+              " (421632799635798, 421844642355758),\n",
+              " (435204259892712, 439631169608317),\n",
+              " (346228874639251, 348705949606190),\n",
+              " (3777222335448, 8986841675241),\n",
+              " (272031233752926, 272031233752926),\n",
+              " (228051220969219, 228895958201430),\n",
+              " (52700210088671, 52700210088671),\n",
+              " (550352897764977, 551737599315320),\n",
+              " (253213704955901, 253213704955901),\n",
+              " (507070502686738, 507629318883518),\n",
+              " (494440516461129, 499624371972173),\n",
+              " (61602155290724, 62760911493000),\n",
+              " (387779080829908, 391235840569230),\n",
+              " (243010599874951, 249377787993989),\n",
+              " (224767428559384, 225090632954429),\n",
+              " (453363172626346, 459410242025970),\n",
+              " (62391638011427, 63814384148355),\n",
+              " (414492754072595, 415345233350855),\n",
+              " (216294968096763, 220610234596709),\n",
+              " (421030670682615, 421844642355758),\n",
+              " (557188295653935, 559175849751733),\n",
+              " (73162059225817, 77857942528390),\n",
+              " (41386931932771, 41798121234147),\n",
+              " (418784088040056, 419540752702017),\n",
+              " (171547816734871, 177417674723193),\n",
+              " (156049317325736, 157713083013427),\n",
+              " (230541499959429, 230744893940397),\n",
+              " (116182857198904, 116182857198904),\n",
+              " (354113252785914, 359458697423182),\n",
+              " (418978112767017, 419296794005487),\n",
+              " (68038134565079, 69154455419203),\n",
+              " (46716851596642, 47059218189379),\n",
+              " (159064300797349, 160671359987907),\n",
+              " (553979977817968, 561691222663012),\n",
+              " (503666795686026, 504275155139743),\n",
+              " (47957434144479, 48635003249459),\n",
+              " (546582843441056, 548153269646485),\n",
+              " (202116631407273, 206836430765951),\n",
+              " (158063352820159, 159531027663572),\n",
+              " (393356656846481, 398726835536739),\n",
+              " (226344960686600, 226874462955883),\n",
+              " (510324215823697, 510460780341342),\n",
+              " (63269135006973, 64565530004254),\n",
+              " (114956541616224, 116182857198903),\n",
+              " (415345233350855, 415537144675574),\n",
+              " (373257462503086, 375706173131616),\n",
+              " (293868386274800, 295969766619988),\n",
+              " (443308497437170, 446800644925950),\n",
+              " (504042730921626, 504700242540661),\n",
+              " (150920174712188, 152397274872244),\n",
+              " (507748643782708, 508605096635634),\n",
+              " (249377787993989, 249377787993989),\n",
+              " (206836430765952, 206836430765952),\n",
+              " (162603090752349, 168818440178176),\n",
+              " (262201801737505, 268716976277319),\n",
+              " (295628974296323, 297570817447083),\n",
+              " (73162059225817, 75402003100619),\n",
+              " (477204362502235, 481218861051116),\n",
+              " (543022069771769, 544317801315511),\n",
+              " (503167419666110, 503446763086081),\n",
+              " (23070165593770, 26446231348661),\n",
+              " (439631169608317, 439631169608317),\n",
+              " (184322179295578, 189961442968559),\n",
+              " (171547816734871, 177417674723193),\n",
+              " (228895958201430, 229542838426617),\n",
+              " (64052698219138, 65472300251955),\n",
+              " (82975441454449, 89832035631476),\n",
+              " (485320426804228, 490455668629320),\n",
+              " (322751001931934, 327447201995140),\n",
+              " (549579362919470, 550882602571418),\n",
+              " (507629318883518, 507748643782708),\n",
+              " (225090632954429, 225602781307742),\n",
+              " (40550200965929, 41105591723792),\n",
+              " (196187140426320, 199651415139902),\n",
+              " (44897081588115, 45454939015848),\n",
+              " (551158339843102, 552713433566961),\n",
+              " (3777222335448, 8986841675241),\n",
+              " (362827345278689, 362827345278689),\n",
+              " (227332290591343, 228051220969219),\n",
+              " (132062946352813, 137718360118904),\n",
+              " (466339752204024, 466339752204024),\n",
+              " (322751001931934, 327447201995140),\n",
+              " (513703091162398, 513703091162398),\n",
+              " (544760722484100, 546377591257946),\n",
+              " (133695608048437, 140093673700877),\n",
+              " (227141470323058, 227602073148074),\n",
+              " (411289155251764, 411289155251764),\n",
+              " (52700210088671, 57425290939038),\n",
+              " (303489649289760, 308383744133552),\n",
+              " (166060412982711, 168818440178176),\n",
+              " (41574209762216, 42039720399629),\n",
+              " (124441375477881, 124441375477881),\n",
+              " (422896486469539, 430790356128521),\n",
+              " (398726835536739, 398726835536739),\n",
+              " (305303032559397, 310217499651725),\n",
+              " (45768124861513, 46033874334090),\n",
+              " (141206293802497, 146734084688879),\n",
+              " (223064988395813, 223742373299620),\n",
+              " (153957555701852, 155623729430666),\n",
+              " (152228984641604, 153388456472721),\n",
+              " (272031233752926, 278791738173520),\n",
+              " (530229955959678, 530229955959678),\n",
+              " (143985840111683, 149296040573497),\n",
+              " (496874970356601, 500590806440339),\n",
+              " (16714933495213, 16714933495213),\n",
+              " (41798121234147, 42039720399629),\n",
+              " (446800644925952, 449830166699334),\n",
+              " (488472001445977, 490455668629320),\n",
+              " (526457439720343, 530229955959677),\n",
+              " (46878965022344, 47059218189379),\n",
+              " (45454939015848, 45768124861513),\n",
+              " (105498168399450, 108274361999005),\n",
+              " (548658062508484, 549962769112066),\n",
+              " (124441375477882, 128741749724178),\n",
+              " (64934334065824, 66417104148574),\n",
+              " (20656954187719, 29282595277568),\n",
+              " (193145043136937, 196187140426319),\n",
+              " (536828066063266, 540039459032565),\n",
+              " (229110224572433, 229922920025646),\n",
+              " (373257462503086, 379773083869403),\n",
+              " (221817098489415, 222010035916811),\n",
+              " (40550200965929, 41105591723792),\n",
+              " (297225855825169, 299738839077055),\n",
+              " (40748473868281, 41386931932771),\n",
+              " (344020205666227, 350744901339638),\n",
+              " (362827345278690, 369700544619976),\n",
+              " (466339752204024, 469118152724803),\n",
+              " (224049185231519, 224767428559384),\n",
+              " (416594970472954, 416830204043459),\n",
+              " (313411354091431, 320683419496855),\n",
+              " (253213704955902, 257493291337439),\n",
+              " (222559609069518, 223064988395813),\n",
+              " (262201801737505, 266666152674535),\n",
+              " (417864098367786, 418308600979635),\n",
+              " (511458984637935, 512066128372526),\n",
+              " (298383621021276, 301484424479456),\n",
+              " (228596222148259, 229259564462957),\n",
+              " (420846828639837, 421392588696371),\n",
+              " (474751855404985, 477204362502234),\n",
+              " (65949902744036, 67301045866627),\n",
+              " (509112359257410, 509836218972110),\n",
+              " (412267101105688, 412866147735741),\n",
+              " (285542413455047, 289657048174370),\n",
+              " (101777623841278, 105498168399448),\n",
+              " (31367435368817, 39355052838458),\n",
+              " (282011287798245, 285542413455045),\n",
+              " (67014797628214, 68443831210252),\n",
+              " (228596222148259, 229110224572433),\n",
+              " (41798121234147, 42667347905031),\n",
+              " (91029563822986, 96257667600685),\n",
+              " (60627233829569, 61836226316755),\n",
+              " (96257667600686, 99538790219793),\n",
+              " (333108951223604, 338085609594136),\n",
+              " (232926277155836, 239812491935436),\n",
+              " (227141470323058, 227824316929169),\n",
+              " (547804385392184, 549167282237119)]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 51
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "sum(rr - rl + 1 for (rl, rr) in optimize_ranges(fresh_ranges))"
+      ],
+      "metadata": {
+        "id": "jS7nBWkwkhtl",
+        "outputId": "63bfd53b-45d4-432e-877d-c66046fc5b11",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 49,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "344486348901788"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 49
+        }
+      ]
     }
   ]
 }
