--- a/2025/aoc2025.ipynb
+++ b/2025/aoc2025.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNPFpLmeZp16D2Uwa9kkJB2",
+      "authorship_tag": "ABX9TyNcLp67BA/dG5+yg0CkiNNO",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -46,7 +46,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 132,
+      "execution_count": 3,
       "metadata": {
         "id": "Qy0LSaFPC5ME",
         "collapsed": true
@@ -214,7 +214,7 @@
         "\n",
         "    return test_input"
       ],
-      "execution_count": 131,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -295,7 +295,7 @@
       "metadata": {
         "id": "FwCcOq_MJ1RT"
       },
-      "execution_count": 213,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -3110,6 +3110,467 @@
           },
           "metadata": {},
           "execution_count": 260
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Day 7"
+      ],
+      "metadata": {
+        "id": "lHiGjkC9PmK3"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Read Input"
+      ],
+      "metadata": {
+        "id": "YsxR1n2o5Ebc"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "test_input_7 = get_aoc_test_input(2025, 7, 5)"
+      ],
+      "metadata": {
+        "collapsed": true,
+        "id": "5Y84NGLxPoV6",
+        "outputId": "2e92110a-8f0f-417a-ad75-ddc8821ef6ed",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Attempting to retrieve Advent of Code 2025 Day 7 problem page from https://adventofcode.com/2025/day/7...\n",
+            "Successfully retrieved problem page HTML.\n",
+            "\n",
+            "First 500 characters of retrieved HTML:\n",
+            "---\n",
+            "<!DOCTYPE html>\n",
+            "<html lang=\"en-us\">\n",
+            "<head>\n",
+            "<meta charset=\"utf-8\"/>\n",
+            "<title>Day 7 - Advent of Code 2025</title>\n",
+            "<link rel=\"stylesheet\" type=\"text/css\" href=\"/static/style.css?32\"/>\n",
+            "<link rel=\"stylesheet alternate\" type=\"text/css\" href=\"/static/highcontrast.css?2\" title=\"High Contrast\"/>\n",
+            "<link rel=\"shortcut icon\" href=\"/favicon.png\"/>\n",
+            "<script>window.addEventListener('click', function(e,s,r){if(e.target.nodeName==='CODE'&&e.detail===3){s=window.getSelection();s.removeAllRanges();r=document.createRan\n",
+            "---\n",
+            "Found 18 <code> tags. Inspecting content for test input:\n",
+            "---\n",
+            "Candidate 1:\n",
+            "0H-N0\n",
+            "\n",
+            "Candidate 2:\n",
+            "S\n",
+            "\n",
+            "Candidate 3:\n",
+            ".\n",
+            "\n",
+            "Candidate 4:\n",
+            "^\n",
+            "\n",
+            "Candidate 5:\n",
+            ".......S.......\n",
+            "...............\n",
+            ".......^.......\n",
+            "...............\n",
+            "......^.^......\n",
+            "...............\n",
+            ".....^.^.^.....\n",
+            "...............\n",
+            "....^.^...^....\n",
+            "...............\n",
+            "...^.^...^.^...\n",
+            "...............\n",
+            "..^...^.....^..\n",
+            "...............\n",
+            ".^.^.^.^.^...^.\n",
+            "...............\n",
+            "\n",
+            "\n",
+            "Candidate 6:\n",
+            "|\n",
+            "\n",
+            "Candidate 7:\n",
+            "S\n",
+            "\n",
+            "Candidate 8:\n",
+            ".......S.......\n",
+            ".......|.......\n",
+            ".......^.......\n",
+            "...............\n",
+            "......^.^......\n",
+            "...............\n",
+            ".....^.^.^.....\n",
+            "...............\n",
+            "....^.^...^....\n",
+            "...............\n",
+            "...^.^...^.^...\n",
+            "...............\n",
+            "..^...^.....^..\n",
+            "...............\n",
+            ".^.^.^.^.^...^.\n",
+            "...............\n",
+            "\n",
+            "\n",
+            "Candidate 9:\n",
+            ".......S.......\n",
+            ".......|.......\n",
+            "......|^|......\n",
+            "...............\n",
+            "......^.^......\n",
+            "...............\n",
+            ".....^.^.^.....\n",
+            "...............\n",
+            "....^.^...^....\n",
+            "...............\n",
+            "...^.^...^.^...\n",
+            "...............\n",
+            "..^...^.....^..\n",
+            "...............\n",
+            ".^.^.^.^.^...^.\n",
+            "...............\n",
+            "\n",
+            "\n",
+            "Candidate 10:\n",
+            ".......S.......\n",
+            ".......|.......\n",
+            "......|^|......\n",
+            "......|.|......\n",
+            "......^.^......\n",
+            "...............\n",
+            ".....^.^.^.....\n",
+            "...............\n",
+            "....^.^...^....\n",
+            "...............\n",
+            "...^.^...^.^...\n",
+            "...............\n",
+            "..^...^.....^..\n",
+            "...............\n",
+            ".^.^.^.^.^...^.\n",
+            "...............\n",
+            "\n",
+            "\n",
+            "Candidate 11:\n",
+            ".......S.......\n",
+            ".......|.......\n",
+            "......|^|......\n",
+            "......|.|......\n",
+            ".....|^|^|.....\n",
+            "...............\n",
+            ".....^.^.^.....\n",
+            "...............\n",
+            "....^.^...^....\n",
+            "...............\n",
+            "...^.^...^.^...\n",
+            "...............\n",
+            "..^...^.....^..\n",
+            "...............\n",
+            ".^.^.^.^.^...^.\n",
+            "...............\n",
+            "\n",
+            "\n",
+            "Candidate 12:\n",
+            ".......S.......\n",
+            ".......|.......\n",
+            "......|^|......\n",
+            "......|.|......\n",
+            ".....|^|^|.....\n",
+            ".....|.|.|.....\n",
+            "....|^|^|^|....\n",
+            "....|.|.|.|....\n",
+            "...|^|^|||^|...\n",
+            "...|.|.|||.|...\n",
+            "..|^|^|||^|^|..\n",
+            "..|.|.|||.|.|..\n",
+            ".|^|||^||.||^|.\n",
+            ".|.|||.||.||.|.\n",
+            "|^|^|^|^|^|||^|\n",
+            "|.|.|.|.|.|||.|\n",
+            "\n",
+            "\n",
+            "Candidate 13:\n",
+            "21\n",
+            "\n",
+            "Candidate 14:\n",
+            "1541\n",
+            "\n",
+            "Candidate 15:\n",
+            ".......S.......\n",
+            ".......|.......\n",
+            "......|^.......\n",
+            "......|........\n",
+            ".....|^.^......\n",
+            ".....|.........\n",
+            "....|^.^.^.....\n",
+            "....|..........\n",
+            "...|^.^...^....\n",
+            "...|...........\n",
+            "..|^.^...^.^...\n",
+            "..|............\n",
+            ".|^...^.....^..\n",
+            ".|.............\n",
+            "|^.^.^.^.^...^.\n",
+            "|..............\n",
+            "\n",
+            "\n",
+            "Candidate 16:\n",
+            ".......S.......\n",
+            ".......|.......\n",
+            "......|^.......\n",
+            "......|........\n",
+            "......^|^......\n",
+            ".......|.......\n",
+            ".....^|^.^.....\n",
+            "......|........\n",
+            "....^.^|..^....\n",
+            ".......|.......\n",
+            "...^.^.|.^.^...\n",
+            ".......|.......\n",
+            "..^...^|....^..\n",
+            ".......|.......\n",
+            ".^.^.^|^.^...^.\n",
+            "......|........\n",
+            "\n",
+            "\n",
+            "Candidate 17:\n",
+            ".......S.......\n",
+            ".......|.......\n",
+            "......|^.......\n",
+            "......|........\n",
+            ".....|^.^......\n",
+            ".....|.........\n",
+            "....|^.^.^.....\n",
+            "....|..........\n",
+            "....^|^...^....\n",
+            ".....|.........\n",
+            "...^.^|..^.^...\n",
+            "......|........\n",
+            "..^..|^.....^..\n",
+            ".....|.........\n",
+            ".^.^.^|^.^...^.\n",
+            "......|........\n",
+            "\n",
+            "\n",
+            "Candidate 18:\n",
+            "40\n",
+            "\n",
+            "Test input candidates extracted. Please review them to identify the actual test input and repeat with concrete candidate number (1-based) if needed.\n",
+            "Identified Test Input (candidate 5):\n",
+            "---------------------\n",
+            ".......S.......\n",
+            "...............\n",
+            ".......^.......\n",
+            "...............\n",
+            "......^.^......\n",
+            "...............\n",
+            ".....^.^.^.....\n",
+            "...............\n",
+            "....^.^...^....\n",
+            "...............\n",
+            "...^.^...^.^...\n",
+            "...............\n",
+            "..^...^.....^..\n",
+            "...............\n",
+            ".^.^.^.^.^...^.\n",
+            "...............\n",
+            "\n",
+            "---------------------\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "input_7 = get_aoc_input(2025, 7)"
+      ],
+      "metadata": {
+        "id": "Z8fJFAD97jat",
+        "outputId": "4ed85f5d-0007-4bef-f3ab-4f0ff54abe2a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Attempting to retrieve Advent of Code 2025 Day 7 puzzle input from https://adventofcode.com/2025/day/7/input...\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "grid, height, width = read_grid(input_7)\n",
+        "# grid"
+      ],
+      "metadata": {
+        "id": "ocB92v78Qh3F"
+      },
+      "execution_count": 13,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Part 1\n",
+        "Simulate tachyon beam from row 0, cell 'S' down, just count splitters that are hit at least once"
+      ],
+      "metadata": {
+        "id": "93U4Uv8MPqt-"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "seen = set()\n",
+        "def collect(p):\n",
+        "  if not in_range(p, (height, width)) or p in seen:\n",
+        "    return set()\n",
+        "  seen.add(p)\n",
+        "  if get_cell(p, grid) == '^':\n",
+        "    return {p} | collect(vec_add(p, dir_left)) | collect(vec_add(p, dir_right))\n",
+        "  # else:\n",
+        "  return collect(vec_add(p, dir_down))\n",
+        "\n",
+        "splits = collect((0, grid[0].find('S')))\n",
+        "len(splits)"
+      ],
+      "metadata": {
+        "id": "V4kgtH5t5BgW",
+        "outputId": "eccebf87-cd78-4e15-abb9-8d92c68c2af4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1541"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 15
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "len(seen)"
+      ],
+      "metadata": {
+        "id": "s8yoVwY3qqhV",
+        "outputId": "4f220e70-f622-48e2-cdce-8a27a4bde0fd",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "7799"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 16
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Part 2\n",
+        "Calculate how many different paths a particle can take\n"
+      ],
+      "metadata": {
+        "id": "PeygNhXnELCT"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "paths = {}\n",
+        "def count_paths(p):\n",
+        "  if not in_range(p, (height, width)):\n",
+        "    return 1\n",
+        "  if p in paths:\n",
+        "    return paths[p]\n",
+        "  if get_cell(p, grid) == '^':\n",
+        "    paths[p] = count_paths(vec_add(p, dir_left)) + count_paths(vec_add(p, dir_right))\n",
+        "    return paths[p]\n",
+        "  # else:\n",
+        "  paths[p] = count_paths(vec_add(p, dir_down))\n",
+        "  return paths[p]\n",
+        "\n",
+        "num_paths = count_paths((0, grid[0].find('S')))\n",
+        "num_paths"
+      ],
+      "metadata": {
+        "id": "n5trr4K4ESOB",
+        "outputId": "81be926f-9140-425b-e1bf-e3aef541f1e1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "80158285728929"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 14
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "len(paths)"
+      ],
+      "metadata": {
+        "id": "0zgQaJkcqpjj",
+        "outputId": "588ff48f-8964-4c9b-e9c7-94b302b10a7f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "7799"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 18
         }
       ]
     }
